Fix blog typos and update path

--- a/src/content/blog/2013-09-05-en-route-to-blendconf.mdx
+++ b/src/content/blog/2013-09-05-en-route-to-blendconf.mdx
@@ -26,11 +26,11 @@ particularly excited to learn about.
 
 ### Generalist vs. Specialist
 
-I plan to attend several talks on the topic of speciailization, with a slant towards becoming and staying a generalist.
+I plan to attend several talks on the topic of specialization, with a slant towards becoming and staying a generalist.
 I definitely consider myself a generalist, something I had always attributed to being fairly early in my career. I've
 noticed that many of the younger developers I work with are more generalist, but those with more experience tend to
 specialize. I've always sort of considered this to be the natural progression of one's career as you gain more
-experinece and gravitate toward particular tasks and projects. That being said, I have always seen a lot of value in
+experience and gravitate toward particular tasks and projects. That being said, I have always seen a lot of value in
 trying new things and going outside of your area of expertise. I'm really excited to hear
 [Leslie Jensen-Inman](https://twitter.com/jenseninman) from the [Unicorn Institute](http://unicorninstitute.com/) and
 [Ben Vandgrift](https://twitter.com/bvandgrift)'s argument for maintaining a generalist status in today's industry.
@@ -39,15 +39,15 @@ trying new things and going outside of your area of expertise. I'm really excite
 
 There are several discussions around how to convince clients to make investments in providing a delightful user
 experience, even when there might be an easier way to accomplish the task at hand. This is something I've run into
-frequenlty in my freelance and business life. A lot of time, user experience is swept aside in favor of an easier,
+frequently in my freelance and business life. A lot of the time, user experience is swept aside in favor of an easier,
 faster way to get a product out. I'm really interested to see how [Garren DiPasquale](https://twitter.com/aduroguy)
 suggests balancing the need to be "first to market" or "time efficient" with providing an excellent user experience.
 
 ## No Devices
 
 I was really, really surprised to hear that the BlendConf organizers are running the conference as a "No Device
-Conference". You read that correctly. No laptops, smartphones, or tablets. I thought that this would be a big deterrant
-for a lot of people but, considereing it's a sold-out affiar, it appears that people are OK with this. I think it's a
+Conference". You read that correctly. No laptops, smartphones, or tablets. I thought that this would be a big deterrent
+for a lot of people but, considering it's a sold-out affair, it appears that people are OK with this. I think it's a
 great idea, but I must admit that this is going to be a hard one to adhere to. I'm the first one to tell you that I'm
 addicted to my devices. It's pretty bad. However, it will be interesting to disconnect for a few days and really listen
 to the talks and connect with the other folks attending.
