--- a/src/content/blog/2018-06-15-fixing-sennheiser-hd1-call-ended-issues/index.mdx
+++ b/src/content/blog/2018-06-15-fixing-sennheiser-hd1-call-ended-issues/index.mdx
@@ -53,7 +53,7 @@ Another alternative is to disable the microphone on the Sennheiser HD1s in the Z
 <MdxImage src={ZoomAudioSettings} alt="" />
 <br />
 
-By using the integrated microphone on your laptop, Zoom will be able to use the aptX codec the during your call,
+By using the integrated microphone on your laptop, Zoom will be able to use the aptX codec during your call,
 preventing any switches between SCO and aptX.
 
 I couldn't find any information on this online, so I hope this article helps out anyone else who's frustrated by the
