--- a/src/content/blog/2019-01-14-travis-ci-xvfb.mdx
+++ b/src/content/blog/2019-01-14-travis-ci-xvfb.mdx
@@ -15,7 +15,7 @@ to fix it.
 ## The Problem
 
 Travis CI released
-[an update to their Xenial build environemnt](https://changelog.travis-ci.com/ubuntu-xenial-16-04-build-environment-update-86123),
+[an update to their Xenial build environment](https://changelog.travis-ci.com/ubuntu-xenial-16-04-build-environment-update-86123),
 which introduced a new way to start up [XVFB](https://en.wikipedia.org/wiki/Xvfb) for front-end builds.
 
 Unfortunately, they broke all existing builds based on their documentation, which had you set it up like this:
