--- a/src/content/blog/2021-01-29-circleci-jest-cache.mdx
+++ b/src/content/blog/2021-01-29-circleci-jest-cache.mdx
@@ -69,7 +69,7 @@ Jest stores useful information in the cache, which improves the performance of y
   [`bail`](https://jestjs.io/docs/en/configuration.html#bail-number--boolean) configuration, so you get super-fast
   feedback on previously failed tests.
 
-- **Faster Typescript transpiling.** If you're using TypeScript with jest, your files are likely transpiled to
+- **Faster TypeScript transpiling.** If you're using TypeScript with jest, your files are likely transpiled to
   Javascript before each run. By restoring the cache, jest will only transpile changed files.
 
 If you want to learn more about the jest cache, check out [Jest Architecture video](https://youtu.be/3YDiloj8_d0) on
