--- a/src/content/blog/2021-12-20-create-or-update-pr-comment/index.mdx
+++ b/src/content/blog/2021-12-20-create-or-update-pr-comment/index.mdx
@@ -117,5 +117,5 @@ update the existing comment with a new timestamp.
 ## Related Post
 
 If you're looking to build against the GitHub GraphQL API in TypeScript, check out my post
-["Adding Typescript Types to Github's GraphQL API"](/blog/2020/05/16/adding-typescript-types-github-graphql-api/). This
+["Adding TypeScript Types to GitHub's GraphQL API"](/blog/2020/05/16/adding-typescript-types-github-graphql-api/). This
 post describes how to gain type-safety when working with the GraphQL API.
